--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,14 @@
             <groupId>org.glassfish.jersey.media</groupId>
             <artifactId>jersey-media-moxy</artifactId>
         </dependency>
+        
+        <!-- JWT -->
+        <dependency>
+        	<groupId>org.bitbucket.b_c</groupId>
+		    <artifactId>jose4j</artifactId>
+		    <version>0.5.1</version>
+	  	</dependency>
+        
     </dependencies>
     <properties>
         <jersey.version>2.22.1</jersey.version>
