--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,14 @@
 		    <artifactId>jose4j</artifactId>
 		    <version>0.5.1</version>
 	  	</dependency>
+	  	
+	  	<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+		<dependency>
+		    <groupId>mysql</groupId>
+		    <artifactId>mysql-connector-java</artifactId>
+		    <version>5.1.39</version>
+		</dependency>
+	  	
         
     </dependencies>
     <properties>
