--- a/pom.xml
+++ b/pom.xml
@@ -51,10 +51,23 @@
         
         <!-- JWT -->
         <dependency>
-        	<groupId>org.bitbucket.b_c</groupId>
-		    <artifactId>jose4j</artifactId>
-		    <version>0.5.1</version>
-	  	</dependency>
+            <groupId>com.nimbusds</groupId>
+            <artifactId>nimbus-jose-jwt</artifactId>
+            <version>3.1.1</version>
+            <type>jar</type>
+        </dependency>
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+            <version>2.7</version>
+            <type>jar</type>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+            <version>2.7.0</version>
+            <type>jar</type>
+        </dependency>
 	  	
 	  	<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
 		<dependency>
