--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,12 @@
             <groupId>org.glassfish.jersey.media</groupId>
             <artifactId>jersey-media-moxy</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.glassfish.jersey.core</groupId>
+            <artifactId>jersey-server</artifactId>
+            <version>2.22.1</version>
+            <type>jar</type>
+        </dependency>
         
         <!-- JWT -->
         <dependency>
