--- a/src/main/webapp/bower.json
+++ b/src/main/webapp/bower.json
@@ -21,6 +21,12 @@
     "angular-resource": "1.4.x",
     "datatables.net": "^1.10.12",
     "datatables.net-dt": "^1.10.12",
-    "datatables.net-bs": "^1.10.12"
+    "datatables.net-bs": "^1.10.12",
+    "font-awesome": "^4.4.0",
+    "Ionicons": "ionicons#^2.0.1",
+    "fullcalendar-scheduler": "^1.3.3",
+    "angular-ui-router": "^0.3.1",
+    "angular-messages": "^1.5.8",
+    "angular-mocks": "^1.5.8"
   }
 }
