--- a/src/main/webapp/bower.json
+++ b/src/main/webapp/bower.json
@@ -27,6 +27,13 @@
     "fullcalendar-scheduler": "^1.3.3",
     "angular-ui-router": "^0.3.1",
     "angular-messages": "^1.5.8",
-    "angular-mocks": "^1.5.8"
+    "angular-mocks": "^1.5.8",
+    "ngstorage": "^0.3.11"
+  },
+
+
+  "resolutions": {
+    "angular": "^1.5.8",
+    "fullcalendar": ">=2.9.1"
   }
 }
