--- a/src/main/webapp/bower.json
+++ b/src/main/webapp/bower.json
@@ -31,7 +31,9 @@
     "ngstorage": "^0.3.11",
     "angular-jwt": "^0.1.2",
     "angular-i18n": "^1.5.8",
-    "angular-bootstrap": "^2.1.1"
+    "angular-bootstrap": "^2.1.1",
+    "ng-currency": "^1.1.2",
+    "ngMask": "angular-mask#^3.1.1"
   },
   "resolutions": {
     "angular": "^1.5.8",
