--- a/src/main/webapp/bower.json
+++ b/src/main/webapp/bower.json
@@ -33,7 +33,8 @@
     "angular-i18n": "^1.5.8",
     "angular-bootstrap": "^2.1.1",
     "ng-currency": "^1.1.2",
-    "ngMask": "angular-mask#^3.1.1"
+    "ngMask": "angular-mask#^3.1.1",
+    "angular-ui-notification": "^0.2.0"
   },
   "resolutions": {
     "angular": "^1.5.8",
