--- a/src/main/webapp/bower.json
+++ b/src/main/webapp/bower.json
@@ -34,7 +34,8 @@
     "angular-bootstrap": "^2.1.1",
     "ng-currency": "^1.1.2",
     "ngMask": "angular-mask#^3.1.1",
-    "angular-ui-notification": "^0.2.0"
+    "angular-ui-notification": "^0.2.0",
+    "moment-duration-format": "^1.3.0"
   },
   "resolutions": {
     "angular": "^1.5.8",
