--- a/src/main/webapp/bower.json
+++ b/src/main/webapp/bower.json
@@ -36,7 +36,9 @@
     "ngMask": "angular-mask#^3.1.1",
     "angular-ui-notification": "^0.2.0",
     "moment-duration-format": "^1.3.0",
-    "angular-loading-bar": "^0.9.0"
+    "angular-loading-bar": "^0.9.0",
+    "angular-ui-select": "^0.19.4",
+    "angular-sanitize": "^1.5.8"
   },
   "resolutions": {
     "angular": "^1.5.8",
