Upload de imagem

--- a/pom.xml
+++ b/pom.xml
@@ -107,6 +107,12 @@
             <version>2.7</version>
         </dependency>
 
+        <!-- Multipart para upload de arquivo -->
+        <dependency>
+            <groupId>org.glassfish.jersey.media</groupId>
+            <artifactId>jersey-media-multipart</artifactId>
+            <version>${jersey.version}</version>
+        </dependency>
 
     </dependencies>
     <properties>
