--- a/pom.xml
+++ b/pom.xml
@@ -114,6 +114,15 @@
             <version>${jersey.version}</version>
         </dependency>
 
+        <!-- Base 64 de imagens no maven -->
+        <!-- https://mvnrepository.com/artifact/com.sun.xml.security/xml-security-impl -->
+        <dependency>
+            <groupId>com.sun.xml.security</groupId>
+            <artifactId>xml-security-impl</artifactId>
+            <version>1.0</version>
+        </dependency>
+
+
     </dependencies>
     <properties>
         <jersey.version>2.22.1</jersey.version>
