--- a/src/main/webapp/bower.json
+++ b/src/main/webapp/bower.json
@@ -38,7 +38,8 @@
     "moment-duration-format": "^1.3.0",
     "angular-loading-bar": "^0.9.0",
     "angular-ui-select": "^0.19.4",
-    "angular-sanitize": "^1.5.8"
+    "angular-sanitize": "^1.5.8",
+    "moment-timezone": "^0.5.5"
   },
   "resolutions": {
     "angular": "^1.5.8",
